# playground

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  tailwind.config.ts
app/: globals.css  layout.tsx  lyqlSyntax.scss  main.tsx  parser.ts
components/ui/: resizable.tsx  separator.tsx
styles/: json-view-theme.ts  syntax-highlight.scss
