[package]
name = "lykiadb-playground"
version = "0.1.0"
license = "MIT OR Apache-2.0"


[lib]
crate-type = ["cdylib"]

[dependencies]
lykiadb-lang = { git = "https://github.com/lykia-rs/lykiadb", branch = "main" }
wasm-bindgen="0.2.92"
serde = { version = "1.0.188", features=["derive", "rc"] }
serde-wasm-bindgen = "0.6.5"
rustc-hash = "1.1.0"